Implement drop down menu

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -56,28 +56,37 @@ header{
         float: right;
         margin-top: 13px;
 
-        a{
+        .header-dropdown-menu-link{
             display: inline-block;
             text-transform: uppercase;
             text-decoration: none;
             color: black;
             font-size: 13px;
             font-weight: bold;
-            margin-left: 36px;
             padding: 13px 11px;
+        }
+
+        ul{
+           width: 100%;
+
+           li{
+               display: inline-block;
+               margin-left: 36px;
+           }
         }
     }
 }
 
 .header-dropdown-menu-item{
     position: relative;
+    width: 105px;
 
     &::after{
         content: url(../images/down-arrow.svg);
         position: absolute;
         top: 0;
-        right: -2px;
-        transform: translateY(90%);
+        right: 5px;
+        transform: translateY(60%);
     }
 
     &:hover{
@@ -100,12 +109,52 @@ header{
     }
 }
 
-// .header-dropdown-submenu{
-//     display: block;
-//     position: absolute;
-//     bottom: 0;
-//     left: 0;
-// }
+.header-dropdown-menu-item:hover .header-dropdown-submenu{
+    display: block;
+}
+
+.header-dropdown-submenu{
+    position: absolute;
+    z-index: 1;
+
+    display: none;
+    width: 155px;
+
+    text-align: left;
+    padding-left: 20px;
+    padding-right: 20px;
+    
+    background-color: white;
+
+    &::before{
+        content: "";
+        display: block;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 100%;
+        background: $accent-color;
+        height: 5px;
+    }
+}
+
+.header-dropdown-sublink{
+    display: block;
+
+    font-size: 13px;
+    line-height: 36px;
+    text-decoration: none;
+    color: black;
+    border-bottom: 1px solid #E7E7E7;
+
+    &:last-of-type{
+        border-bottom: 0;
+    }
+
+    &:hover{
+        color: $accent-color;
+    }
+}
 
 .main{
     background-color: $main-color;
@@ -315,10 +364,48 @@ $icon-size: 40px;
     }
 
     &-sample{
+        display: inline-block;
+
+        overflow: hidden;
+        position: relative;
+
         margin-right: 40px;
 
         &:last-of-type{
             margin-right: 0;
+        }
+
+        &-reveal{
+            padding: 28px 0;
+
+            text-align: center;
+            background-color: $accent-color;
+
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+
+            transform: translateY(100%);
+            transition: transform 0.15s ease-in;
+
+            a{
+                display: inline-block;
+                
+                img{
+                    height: 24px;
+                    width: auto;
+                    margin: 0 19px;
+                }
+            }
+        }
+
+        &:hover{
+            cursor: pointer;
+        }
+
+        &:hover &-reveal{
+            transform: none;
         }
     }
 }
@@ -502,6 +589,10 @@ $icon-size: 40px;
             @extend .footer-text;
 
             text-decoration: none;
+
+            &:hover{
+                color: $accent-color;
+            }
         }
     }
 
